--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Assets/Css/style.css">
+    <link rel="stylesheet" href="Assets/Css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
     <title>Portfólio Nicolas</title>
 </head>
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <div class="esquerda">
-                <img class="img-nav" src="/Assets/Imgs/logo-fix.png" width="90px">
+                <img class="img-nav" src="Assets/Imgs/logo-fix.png" width="90px">
                 <p class="home-nav">
                     Nicolas TFS
                 </p>
@@ -101,25 +101,25 @@
 
                 <div class="carta">
                     <a href="" class="links-carta">
-                      <img class="img-carta" src="/Assets/Imgs/la-calculadora-electronica-hoy-tiene-mil-formas-R37AA5XU6FB5FOR32TY3DNGMNY.avif" width="300px">
+                      <img class="img-carta" src="Assets/Imgs/la-calculadora-electronica-hoy-tiene-mil-formas-R37AA5XU6FB5FOR32TY3DNGMNY.avif" width="300px">
                       <h1 class="title-carta">Calculadora</h1>
                     </a>
                 </div>
                 <div class="carta">
                     <a href="" class="links-carta">
-                      <img class="img-carta" src="/Assets/Imgs/IMG_20240623_120535.jpg" width="300px">
+                      <img class="img-carta" src="Assets/Imgs/IMG_20240623_120535.jpg" width="300px">
                       <h1 class="title-carta">Relógio Digital</h1>
                     </a>
                 </div>
                 <div class="carta">
                     <a href="" class="links-carta">
-                      <img class="img-carta" src="/Assets/Imgs/conversor de moedas.png" width="300px">
+                      <img class="img-carta" src="Assets/Imgs/conversor de moedas.png" width="300px">
                       <h1 class="title-carta">Conversor de Moedas</h1>
                     </a>
                 </div>
                 <div class="carta">
                     <a href="" class="links-carta">
-                      <img class="img-carta" src="/Assets/Imgs/pure-css-coverflow-slider.jpg" width="300px">
+                      <img class="img-carta" src="Assets/Imgs/pure-css-coverflow-slider.jpg" width="300px">
                       <h1 class="title-carta">Galeria Digital</h1>
                     </a>
                 </div>
