--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 </div>
                 <div class="carta">
                     <a href="" class="links-carta">
-                      <img class="img-carta" src="Assets/Imgs/conversor de moedas.png" width="300px">
+                      <img class="img-carta" src="Assets/Imgs/conversor_de.jpg" width="300px">
                       <h1 class="title-carta">Conversor de Moedas</h1>
                     </a>
                 </div>
