--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
             </div>
         </div>
-        <div class="color-inf" id="sobre">
-            <div class="informacoes">
+        <div class="color-inf" >
+            <div class="informacoes" id="sobre">
                 <div class="p-esc">
                     <div class="card">
                         <h1 class="card1">
@@ -101,25 +101,25 @@
 
                 <div class="carta">
                     <a href="" class="links-carta">
-                      <img class="img-carta" src="Assets/Imgs/la-calculadora-electronica-hoy-tiene-mil-formas-R37AA5XU6FB5FOR32TY3DNGMNY.avif" width="300px">
+                      <img class="img-carta" src="/Assets/Imgs/la-calculadora-electronica-hoy-tiene-mil-formas-R37AA5XU6FB5FOR32TY3DNGMNY.avif" width="300px">
                       <h1 class="title-carta">Calculadora</h1>
                     </a>
                 </div>
                 <div class="carta">
                     <a href="" class="links-carta">
-                      <img class="img-carta" src="Assets/Imgs/IMG_20240623_120535.jpg" width="300px">
+                      <img class="img-carta" src="/Assets/Imgs/IMG_20240623_120535.jpg" width="300px">
                       <h1 class="title-carta">Relógio Digital</h1>
                     </a>
                 </div>
                 <div class="carta">
                     <a href="" class="links-carta">
-                      <img class="img-carta" src="Assets/Imgs/conversor_de.jpg" width="300px">
+                      <img class="img-carta" src="/Assets/Imgs/conversor de moedas.png" width="300px">
                       <h1 class="title-carta">Conversor de Moedas</h1>
                     </a>
                 </div>
                 <div class="carta">
                     <a href="" class="links-carta">
-                      <img class="img-carta" src="Assets/Imgs/pure-css-coverflow-slider.jpg" width="300px">
+                      <img class="img-carta" src="/Assets/Imgs/pure-css-coverflow-slider.jpg" width="300px">
                       <h1 class="title-carta">Galeria Digital</h1>
                     </a>
                 </div>
@@ -142,10 +142,10 @@
             </div>
             <div class="footer-meio">
                 <p>
-                    <a href="https://www.instagram.com/nick_.034" class="links-footer-meio"> <i class="ri-instagram-line" style="font-size:40px ;"></i> </a>
-                    <a href="https://github.com/kaikatsu-aut/Portif-lio-Nicolas/tree/main/Assets" class="links-footer-meio"> <i class="ri-github-fill" style="font-size: 40px;"></i> </a>
-                    <a href="https://mail.google.com/mail/u/1/#inbox" class="links-footer-meio"> <i class="ri-mail-unread-line" style="font-size: 40px;"></i> </a>
-                    <a href="https://web.whatsapp.com/" class="links-footer-meio"> <i class="ri-whatsapp-line" style="font-size: 40px;"></i> </a>
+                    <a target="_blank" href="https://www.instagram.com/nick_.034" class="links-footer-meio"> <i class="ri-instagram-line" style="font-size:40px ;"></i> </a>
+                    <a target="_blank" href="https://github.com/kaikatsu-aut/Portif-lio-Nicolas/tree/main/Assets" class="links-footer-meio"> <i class="ri-github-fill" style="font-size: 40px;"></i> </a>
+                    <a target="_blank" href="mailto:nicolasthiagodev@gmail.com" class="links-footer-meio"> <i class="ri-mail-unread-line" style="font-size: 40px;"></i> </a>
+                    <a target="_blank" href="https://wa.me/5534996583130" class="links-footer-meio"> <i class="ri-whatsapp-line" style="font-size: 40px;"></i> </a>
                 </p>
             </div>
             <div class="footer-dir">
