--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
             </div>
         </div>
-        <div class="color-inf" >
-            <div class="informacoes" id="sobre">
+        <div class="color-inf" id="sobre" >
+            <div class="informacoes" >
                 <div class="p-esc">
                     <div class="card">
                         <h1 class="card1">
