--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="stylesheet" href="./Assets/Css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
     <title>Portfólio Nicolas</title>
@@ -149,7 +150,7 @@
                 </p>
             </div>
             <div class="footer-dir">
-                <p>
+                <p class="desp-footer">
                     © Nicolas TFS. - Feito com ♥ e café. 2025 
                 </p>
             </div>
